--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </tr>
           <tr>
             <td>7</td>
-            <td>8</td>
+            <td id="cell8">8</td>
             <td>9</td>
             <td>10</td>
             <td>11</td>
